# Calculadora

./: CMakeLists.txt  Calculadora.h  LICENSE  QuickMaths.c  QuickMaths.h  README.md  license.c  license.h  main.c
.github/workflows/: cmake.yml
math/: CMakeLists.txt  math.c  math.h
maths/: CMakeLists.txt  maths.c  maths.h
util/: CMakeLists.txt  except.h  terminal.h  util.h
utils/: CMakeLists.txt  except.c  except.h  string.h  terminal.c  terminal.h  utils.c  utils.h
